--- a/index.html
+++ b/index.html
@@ -1,7 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <title>Starter Template - Materialize</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>Here will be something. Maybe even soon...</p>
-</body>
+    <div id="main-tab" class="row">
+    <div class="col s12">
+      <ul class="tabs">
+        <li class="tab col s3"><a class="active" href="#about">About me</a></li>
+        <li class="tab col s3"><a href="#education">Education</a></li>
+        <li class="tab col s3"><a href="#skills">Skills</a></li>
+        <li class="tab col s3"><a href="#projects">Projects</a></li>
+        <li class="tab col s3"><a href="#publications">Publications</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="box blue-grey darken-1"></div>
+  <div class="container">
+    <div class="row">
+    <div id="about" class="col s8 offset-s2">
+      <div class="card hoverable">
+        <div class="card-image">
+          <img src="img/me.jpg">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator blue-grey-text text-darken-4">About Me</span>
+          <p>I am a very simple card. I am good at containing small bits of information.
+          I am convenient because I require little markup to use effectively.</p>
+        </div>
+      </div>
+    </div>
+    <div id="education" class="col s12">Test 2</div>
+    <div id="skills" class="col s12">Test 3</div>
+    <div id="projects" class="col s12">Test 4</div>
+    <div id="publications" class="col s12">Test 4</div>
+  </div>
+  </div>
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+
+  </body>
 </html>
