Decrease size of image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="about" class="col s8 offset-s2">
       <div class="card hoverable">
         <div class="card-image">
-          <img src="img/me.jpg">
+          <img src="images/me.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator blue-grey-text text-darken-4">About Me</span>
