--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <div id="main-tab" class="row">
     <div class="col s12">
       <ul class="tabs">
-        <li class="tab col s3"><a class="active" href="#about">About me</a></li>
-        <li class="tab col s3"><a href="#education">Education</a></li>
-        <li class="tab col s3"><a href="#skills">Skills</a></li>
-        <li class="tab col s3"><a href="#projects">Projects</a></li>
-        <li class="tab col s3"><a href="#publications">Publications</a></li>
+        <li class="tab col s3"><a id="aboutMeTab" class="waves-effect active" href="#about">About me</a></li>
+        <li class="tab col s3"><a class="waves-effect" href="#education">Education</a></li>
+        <li class="tab col s3"><a class="waves-effect" href="#skills">Skills</a></li>
+        <li class="tab col s3"><a class="waves-effect" href="#projects">Projects</a></li>
+        <li class="tab col s3"><a class="waves-effect" href="#publications">Publications</a></li>
       </ul>
     </div>
   </div>
@@ -36,7 +36,7 @@
   <div class="container">
     <div class="row">
     <div id="about" class="col s8 offset-s2">
-      <div class="card hoverable">
+      <div id="aboutMeCard" class="card hoverable">
         <div class="card-image">
           <img src="images/me.jpg">
         </div>
