--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li class="tab col s3"><a class="waves-effect" href="#education">Education</a></li>
         <li class="tab col s3"><a class="waves-effect" href="#skills">Skills</a></li>
         <li class="tab col s3"><a class="waves-effect" href="#projects">Projects</a></li>
-        <li class="tab col s3"><a class="waves-effect" href="#publications">Publications</a></li>
+        <li class="tab col s3"><a id="publicationsTab" class="waves-effect" href="#publications">Publications</a></li>
       </ul>
     </div>
   </div>
@@ -41,7 +41,7 @@
           <img src="images/me.jpg">
         </div>
         <div class="card-content">
-          <span class="card-title activator blue-grey-text text-darken-4">About Me</span>
+          <span class="card-title activator blue-grey-text text-darken-4">About me</span>
           <p>I am a very simple card. I am good at containing small bits of information.
           I am convenient because I require little markup to use effectively.</p>
         </div>
@@ -50,7 +50,17 @@
     <div id="education" class="col s12">Test 2</div>
     <div id="skills" class="col s12">Test 3</div>
     <div id="projects" class="col s12">Test 4</div>
-    <div id="publications" class="col s12">Test 4</div>
+    <div id="publications" class="col s12">
+      <div id="publicationsCard" class="card hoverable">
+        <div class="card-image">
+          <img src="images/book.jpg">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator blue-grey-text text-darken-4">List of Publications</span>
+          <ul id="publicationsList" class="collection"></ul>
+        </div>
+      </div>
+    </div>
   </div>
   </div>
   <!--  Scripts-->
