Provide links to publications

--- a/publications.html
+++ b/publications.html
@@ -1,80 +1,70 @@
-<!-- Authors: Laure Denis and Medvedev Oleg and Balandin Sergey and Lagutina
-  Ksenia -->
-<li class="collection-item"><a name="fruct17:walkydoggy"></a>Denis Laure, Oleg Medvedev,
-  Sergey Balandin, and Ksenia Lagutina.
+<!-- Authors: Laure Denis and Medvedev Oleg and Balandin Sergey and Lagutina Ksenia -->
+<a href="http://fruct.org/publications/fruct17/files/Lau.pdf" target="_blank" class="blue-grey-text text-darken-4 collection-item">
+Denis Laure, Oleg Medvedev, Sergey Balandin, and Ksenia Lagutina.
 Mobile apps for stimulating healthy life: Walky Doggy reference example.
 In <cite>Proceedings of the 17th Conference of Open Innovations Association
   FRUCT. Yaroslavl, Russia, 20-24 April 2015</cite>, number ISBN
   978-5-7577-0493-7, pages 110&ndash;115, St.-Petersburg, 2015. FRUCT, ITMO
-  University.</li>
+  University.</a>
 
 <!-- Authors: Denis Laure and Ilya Paramonov -->
-<li class="collection-item"><a name="fruct13:pulsedetector"></a>Denis Laure and Ilya
-  Paramonov.
-Improved algorithm for heart rate measurement using mobile phone camera.
-In <cite>Proceedings of the 13th Conference of Open Innovations Association
-  FRUCT and Seminar on e-Tourism. Pertozavodsk, Russia, April 22-26,
-  2013</cite>, pages 85&ndash;93, St.-Petersburg, 2013. SUAI.</li>
-
-<!-- Authors: Denis Laure and Ilya Paramonov -->
-<li class="collection-item"><a name="fruct14:substitutionframework"></a>Denis Laure and Ilya
-  Paramonov.
-RoDaFlow: A framework for development of dataflow network agents in
-  Smart-M3 with substitution method.
+<a href="http://fruct.org/publications/fruct14/files/Lau_39.pdf" target="_blank" class="blue-grey-text text-darken-4 collection-item">
+Denis Laure and Ilya Paramonov.
+RoDaFlow: A framework for development of dataflow network agents in Smart-M3 with substitution method.
 In <cite>Proceedings of the 14th Conference of Open Innovations Association
   FRUCT. Helsinki, Finland, November 11-15, 2013</cite>, pages 57&ndash;62,
   St.-Petersburg, 2013. FRUCT, State University of Aerospace Instrumentation
-  (SUAI).</li>
+  (SUAI).</a>
 
-<!-- Authors: Laure Denis and Paramonov Ilya and Vasilev Andrey and Timofeev
-  Ivan -->
-<!-- Keywords: RedSib; Smart-M3; Agent substitution; dataflow network;
-  Reliability -->
-<li class="collection-item"><a name="rusmart2013:substitution"></a>Denis Laure, Ilya Paramonov,
-  Andrey Vasilev, and Ivan Timofeev.
-Agent substitution mechanism for dataflow networks: Case study and
-  implementation in Smart-M3.
+<!-- Authors: Laure Denis and Paramonov Ilya and Vasilev Andrey and Timofeev Ivan -->
+<!-- Keywords: RedSib; Smart-M3; Agent substitution; dataflow network; Reliability -->
+<a href="http://dx.doi.org/10.1007/978-3-642-40316-3_6" target="_blank" class="blue-grey-text text-darken-4 collection-item">
+Denis Laure, Ilya Paramonov, Andrey Vasilev, and Ivan Timofeev.
+Agent substitution mechanism for dataflow networks: Case study and implementation in Smart-M3.
 In Sergey Balandin, Sergey Andreev, and
   Yevgeni Koucheryavy, editors, <cite>Internet of Things, Smart
   Spaces, and Next Generation Networking</cite>, volume 8121 of <cite>Lecture
   Notes in Computer Science</cite>, pages 60&ndash;71. Springer Berlin Heidelberg,
-  2013.
-(<a href="http://dx.doi.org/10.1007/978-3-642-40316-3_6">doi:10.1007/978-3-642-40316-3_6</a>)</li>
+  2013.(doi:10.1007/978-3-642-40316-3_6)</a>
+
+<!-- Authors: Denis Laure and Ilya Paramonov -->
+<a href="https://fruct.org/publications/fruct13/files/Lau.pdf" target="_blank" class="blue-grey-text text-darken-4 collection-item">
+Denis Laure and Ilya Paramonov.
+Improved algorithm for heart rate measurement using mobile phone camera.
+In <cite>Proceedings of the 13th Conference of Open Innovations Association
+  FRUCT and Seminar on e-Tourism. Pertozavodsk, Russia, April 22-26,
+  2013</cite>, pages 85&ndash;93, St.-Petersburg, 2013. SUAI.</a>
 
 <!-- Authors: Denis Laure -->
-<li class="collection-item"><a name="fruct12:pulsedetector"></a>Denis Laure.
+<a href="https://fruct.org/publications/abstract12/files/Lau.pdf" target="_blank" class="blue-grey-text text-darken-4 collection-item">
+Denis Laure.
 Heart rate measuring using mobile phone's camera.
 In <cite>Proceedings of the 12th Conference of Open Innovations Association
   FRUCT and Seminar on e-Travel. Oulu, Finland, November 5-9, 2012</cite>,
-  pages 272&ndash;273, St.-Petersburg, 2012. SUAI.</li>
+  pages 272&ndash;273, St.-Petersburg, 2012. SUAI.</a>
 
-<!-- Authors: Denis Laure and Ilya Paramonov and Andrey Vasilev and Nikita
-  Kozhemyakin -->
-<li class="collection-item"><a name="fruct11:preprocessor"></a>Denis Laure, Ilya Paramonov,
-  Andrey Vasilev, and Nikita Kozhemyakin.
-Preprocessor based approach for cross-platform development with Qt Quick
-  Components.
+<!-- Authors: Denis Laure and Ilya Paramonov and Andrey Vasilev and Nikita Kozhemyakin -->
+<a href="http://fruct.org/publications/fruct11/files/Par.pdf" target="_blank" class="blue-grey-text text-darken-4 collection-item">
+Denis Laure, Ilya Paramonov, Andrey Vasilev, and Nikita Kozhemyakin.
+Preprocessor based approach for cross-platform development with Qt Quick Components.
 In <cite>Proceedings of the 11th Conference of Open Innovations Association
   FRUCT. Petrozavodsk, Russia, 23-27 April 2012</cite>, pages 143&ndash;150,
-  St.-Petersburg, 2012. SUAI.</li>
+  St.-Petersburg, 2012. SUAI.</a>
 
-<!-- Authors: Denis Laure and Ilya Paramonov and Andrey Vasilev and Yury Krupin
-  -->
-<li class="collection-item"><a name="fruct11:octotask"></a>Denis Laure, Ilya Paramonov,
-  Andrey Vasilev, and Yury Krupin.
+<!-- Authors: Denis Laure and Ilya Paramonov and Andrey Vasilev and Yury Krupin -->
+<a href="https://fruct.org/publications/abstract11/files/Lau.pdf" target="_blank" class="blue-grey-text text-darken-4 collection-item">
+Denis Laure, Ilya Paramonov, Andrey Vasilev, and Yury Krupin.
 Context-awareness feature in Octotask task manager.
 In <cite>Proceedings of the 11th Conference of Open Innovations Association
   FRUCT. Petrozavodsk, Russia, 23-27 April 2012</cite>, pages 192&ndash;193,
-  St.-Petersburg, 2012. SUAI.</li>
+  St.-Petersburg, 2012. SUAI.</a>
 
-<!-- Authors: Denis Laure and Yury Krupin and Alexander Abdulloev and Ilya
-  Paramonov and Andrey Vasilev -->
+<!-- Authors: Denis Laure and Yury Krupin and Alexander Abdulloev and Ilya Paramonov and Andrey Vasilev -->
 <!-- Keywords: GTD, synchronization, organizer, mobile device -->
-<li class="collection-item"><a name="synchronization"></a>Denis Laure, Yury Krupin,
-  Alexander Abdulloev, Ilya Paramonov, and
-  Andrey Vasilev.
+<a style="cursor:help;" class="blue-grey-text text-darken-4 collection-item">
+Denis Laure, Yury Krupin, Alexander Abdulloev, Ilya Paramonov, and Andrey Vasilev.
 Synchronization with external task systems in Octotask application.
 In <cite>Proceedings of the 10th Conference of Open Innovations Association
   FRUCT and the 2nd Finnish-Russian Mobile Linux Summit. Tampere, Finland, 7-11
   November 2011</cite>, number ISBN 978-5-8088-0659-7, pages 76&ndash;82,
-  St.-Petersburg, 2011. FRUCT, SUAI.</li>
+  St.-Petersburg, 2011. FRUCT, SUAI.</a>
