--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <img src="images/me.jpg">
         </div>
         <div class="card-content">
-          <span class="card-title activator blue-grey-text text-darken-4">About me</span>
+          <span class="card-title blue-grey-text text-darken-4">About me</span>
           <p>I am a very simple card. I am good at containing small bits of information.
           I am convenient because I require little markup to use effectively.</p>
         </div>
@@ -56,8 +56,8 @@
           <img src="images/book.jpg">
         </div>
         <div class="card-content">
-          <span class="card-title activator blue-grey-text text-darken-4">List of Publications</span>
-          <ul id="publicationsList" class="collection"></ul>
+          <span class="card-title blue-grey-text text-darken-4">List of Publications</span>
+          <div id="publicationsList" class="collection"></div>
         </div>
       </div>
     </div>
