--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
     <div id="projects" class="col s12">Test 4</div>
     <div id="publications" class="col s12">
       <div id="publicationsCard" class="card hoverable">
-        <div class="card-image">
-          <img src="images/book.jpg">
-        </div>
+        <div id="publicationsImage" class="card-image"></div>
         <div class="card-content">
           <span class="card-title blue-grey-text text-darken-4">List of Publications</span>
           <div id="publicationsList" class="collection"></div>
