Added empty studies card

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="col s12">
       <ul class="tabs">
         <li class="tab col s3"><a id="aboutMeTab" class="waves-effect active" href="#about">About me</a></li>
-        <li class="tab col s3"><a class="waves-effect" href="#education">Education</a></li>
+        <li class="tab col s3"><a id="educationTab" class="waves-effect" href="#education">Education</a></li>
         <li class="tab col s3"><a class="waves-effect" href="#skills">Skills</a></li>
         <li class="tab col s3"><a class="waves-effect" href="#projects">Projects</a></li>
         <li class="tab col s3"><a id="publicationsTab" class="waves-effect" href="#publications">Publications</a></li>
@@ -47,13 +47,22 @@
         </div>
       </div>
     </div>
-    <div id="education" class="col s12">Test 2</div>
+    <div id="education" class="col s12">
+      <div id="educationCard" class="card hoverable">
+        <div class="card-image">
+          <img src="images/studies.jpg">
+        </div>
+        <div class="card-content">
+          <span class="card-title blue-grey-text text-darken-4">Education</span>
+        </div>
+      </div>
+    </div>
     <div id="skills" class="col s12">Test 3</div>
     <div id="projects" class="col s12">Test 4</div>
     <div id="publications" class="col s12">
       <div id="publicationsCard" class="card hoverable">
         <div class="card-image">
-          <img src=\"images/book.jpg\">
+          <img src="images/book.jpg">
         </div>
         <div class="card-content">
           <span class="card-title blue-grey-text text-darken-4">List of Publications</span>
