--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li class="tab col s3"><a id="aboutMeTab" class="waves-effect active" href="#about">About me</a></li>
         <li class="tab col s3"><a id="educationTab" class="waves-effect" href="#education">Education</a></li>
         <li class="tab col s3"><a class="waves-effect" href="#skills">Skills</a></li>
-        <li class="tab col s3"><a class="waves-effect" href="#projects">Projects</a></li>
+        <li class="tab col s3"><a id="projectsTab" class="waves-effect" href="#projects">Projects</a></li>
         <li class="tab col s3"><a id="publicationsTab" class="waves-effect" href="#publications">Publications</a></li>
       </ul>
     </div>
@@ -58,7 +58,16 @@
       </div>
     </div>
     <div id="skills" class="col s12">Test 3</div>
-    <div id="projects" class="col s12">Test 4</div>
+    <div id="projects" class="col s12">
+      <div id="projectsCard" class="card hoverable">
+        <div class="card-image">
+          <img src="images/work.jpg">
+        </div>
+        <div class="card-content">
+          <span class="card-title blue-grey-text text-darken-4">Projects</span>
+        </div>
+      </div>
+    </div>
     <div id="publications" class="col s12">
       <div id="publicationsCard" class="card hoverable">
         <div class="card-image">
