Add empty skills card

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <ul class="tabs">
         <li class="tab col s3"><a id="aboutMeTab" class="waves-effect active" href="#about">About me</a></li>
         <li class="tab col s3"><a id="educationTab" class="waves-effect" href="#education">Education</a></li>
-        <li class="tab col s3"><a class="waves-effect" href="#skills">Skills</a></li>
+        <li class="tab col s3"><a id="skillsTab" class="waves-effect" href="#skills">Skills</a></li>
         <li class="tab col s3"><a id="projectsTab" class="waves-effect" href="#projects">Projects</a></li>
         <li class="tab col s3"><a id="publicationsTab" class="waves-effect" href="#publications">Publications</a></li>
       </ul>
@@ -57,11 +57,20 @@
         </div>
       </div>
     </div>
-    <div id="skills" class="col s12">Test 3</div>
+    <div id="skills" class="col s12">
+      <div id="skillsCard" class="card hoverable">
+        <div class="card-image">
+          <img src="images/skills.jpg">
+        </div>
+        <div class="card-content">
+          <span class="card-title blue-grey-text text-darken-4">Professional skills</span>
+        </div>
+      </div>
+    </div>
     <div id="projects" class="col s12">
       <div id="projectsCard" class="card hoverable">
         <div class="card-image">
-          <img src="images/work.jpg">
+          <img src="images/projects.jpg">
         </div>
         <div class="card-content">
           <span class="card-title blue-grey-text text-darken-4">Projects</span>
