--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="icon" type="image/png" href="images/favicons/favicon-16x16.png" sizes="16x16">
   <link rel="manifest" href="images/favicons/manifest.json">
   <link rel="shortcut icon" href="images/favicons/favicon.ico">
-  <meta name="msapplication-TileColor" content="##546e7a">
+  <meta name="msapplication-TileColor" content="#546e7a">
   <meta name="msapplication-config" content="images/favicons/browserconfig.xml">
-  <meta name="theme-color" content="##546e7a">
+  <meta name="theme-color" content="#546e7a">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
   <title>Denis Laure</title>
