--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
         </div>
         <div class="card-content">
           <span class="card-title blue-grey-text text-darken-4">About me</span>
-          <p>I am a very simple card. I am good at containing small bits of information.
-          I am convenient because I require little markup to use effectively.</p>
+          <p>Hello! My name is Denis Laure and I'm 24 years old student from Russia. Currently I'm doing my MSc degree in the North of Europe &mdash; Stockholm, Sweden. I'm studying human-computer interaction and design, but I also have strong background in research and software development. I like music, enjoy traveling and learning new things.
+          <br><br>
+          <p>Right now I'm looking for internship and mater thesis work. Please, follow the tabs on the top of this page, if you want to know more about me. You can also download my Сurriculum vit&aelig; in PDF format by pressing the link below.</p>
+        </div>
+        <div class="card-action">
+          <a href="publications/denis-laure-cv.pdf" target="_blank">Download CV</a>
         </div>
       </div>
     </div>
