Fix link to the CV

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <p>Right now I'm looking for internship and mater thesis work. Please, follow the tabs on the top of this page, if you want to know more about me. You can also download my Сurriculum vit&aelig; in PDF format by pressing the link below.</p>
         </div>
         <div class="card-action">
-          <a href="publications/denis-laure-cv.pdf" target="_blank">Download CV</a>
+          <a href="https://cdn.rawgit.com/denLaure/denLaure.github.io/master/documents/denis-laure-cv.pdf" target="_blank">Download CV</a>
         </div>
       </div>
     </div>
