Added empty footer

--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@
     </div>
   </div>
   </div>
+  <footer class="page-footer blue-grey darken-1">
+    <div class="container">
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      &copy; 2015 Denis Laure
+      </div>
+    </div>
+  </footer>
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
