--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         </div>
         <div class="card-content">
           <span class="card-title blue-grey-text text-darken-4">Education</span>
+          <p>Under development..</p>
         </div>
       </div>
     </div>
@@ -68,6 +69,7 @@
         </div>
         <div class="card-content">
           <span class="card-title blue-grey-text text-darken-4">Professional skills</span>
+          <p>Under development..</p>
         </div>
       </div>
     </div>
@@ -78,6 +80,7 @@
         </div>
         <div class="card-content">
           <span class="card-title blue-grey-text text-darken-4">Projects</span>
+          <p>Under development..</p>
         </div>
       </div>
     </div>
