Add contact info

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <p>Right now I'm looking for internship and mater thesis work. Please, follow the tabs on the top of this page, if you want to know more about me. You can also download my Сurriculum vit&aelig; in PDF format by pressing the link below.</p>
         </div>
         <div class="card-action">
+          <a class="modal-trigger" href="#contact">Contact me</a>
           <a href="https://cdn.rawgit.com/denLaure/denLaure.github.io/master/documents/denis-laure-cv.pdf" target="_blank">Download CV</a>
         </div>
       </div>
@@ -97,12 +98,39 @@
     </div>
   </div>
   </div>
+  <div id="contact" class="modal">
+    <div class="modal-content container">
+      <div class="row">
+        <div class="col s12 valign-wrapper">
+          <h5>Contacts</h5>
+        </div>
+        <div class="col s12 valign-wrapper">
+          <h5></h5>
+        </div>
+        <div class="col s1 valign-wrapper left-align">
+          <i class="material-icons blue-grey-text text-darken-1">email</i>
+        </div>
+        <div class="col s2 valign-wrapper right-align">
+          <span><a href="mailto:den.a.laure@gmail.com" class="styled-link-dark">den.a.laure@gmail.com</a></span>
+        </div>
+        <div class="col s1 offset-s5 valign-wrapper left-align">
+          <i class="material-icons blue-grey-text text-darken-1">phone</i>
+        </div>
+        <div class="col s2 valign-wrapper right-align">
+          <span class="blue-grey-text text-darken-1">+79159695374</span>
+        </div>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <a href="#" class="modal-action modal-close waves-effect btn-flat">Close</a>
+    </div>
+  </div>
   <footer class="page-footer blue-grey darken-1">
     <div class="container">
     </div>
     <div class="footer-copyright">
       <div class="container">
-      &copy; 2015 Denis Laure
+      &copy; 2015 <a class="modal-trigger styled-link-light" href="#contact">Denis Laure</a>, All rights reserved.
       </div>
     </div>
   </footer>
