Add credits info

--- a/index.html
+++ b/index.html
@@ -125,12 +125,23 @@
       <a href="#" class="modal-action modal-close waves-effect btn-flat">Close</a>
     </div>
   </div>
+  <div id="credits" class="modal">
+    <div class="modal-content container">
+        <h4>Credits</h4>
+        <p>This website is made with the use of <a href="http://materializecss.com" target="_blank" class="styled-link-dark">Materialize</a> framework.</p>
+        <p>Favicon for this web site is cropped and converted to all need formats from &ldquo;<a href="https://www.creativetail.com/iconsmind-50-icons/" target="_blank" class="styled-link-dark">Iconsmind 50 icons</a>&rdquo; by <a href="https://www.iconsmind.com" target="_blank" class="styled-link-dark">Iconsmind</a> that is licensed under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" class="styled-link-dark">CC BY 4.0</a>.</p>
+        <p>All other images on this website, except the photo of Denis Laure, are licensed under <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank" class="styled-link-dark">CC0 1.0</a>.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#" class="modal-action modal-close waves-effect btn-flat">Close</a>
+    </div>
+  </div>
   <footer class="page-footer blue-grey darken-1">
     <div class="container">
     </div>
     <div class="footer-copyright">
       <div class="container">
-      &copy; 2015 <a class="modal-trigger styled-link-light" href="#contact">Denis Laure</a>, All rights reserved.
+        &copy; 2015 <a class="modal-trigger styled-link-light" href="#contact">Denis Laure</a>, All rights reserved.<a class="modal-trigger styled-link-light right" href="#credits">Credits</a>
       </div>
     </div>
   </footer>
