Add information about EIT Studies

--- a/index.html
+++ b/index.html
@@ -59,6 +59,26 @@
         </div>
         <div class="card-content">
           <span class="card-title blue-grey-text text-darken-4">Education</span>
+          <div class="divider"></div>
+          <div class="section">
+            <h5>EIT Digital Master School</h5>
+            <p>In 2014 I was accepted to <a href="http://www.masterschool.eitdigital.eu" arget="_blank" class="styled-link-dark">EIT Digital Master School</a> with the technical major in <a href="http://www.masterschool.eitdigital.eu/programmes/hcid/" arget="_blank" class="styled-link-dark">Human Computer Interaction and Design</a>. EIT Digital Master School is a two-year double degree masters programme that combines teaching of up-to-date ICT topics with skills in Innovation and Entrepreneurship. It is organized by <a href="www.eitdigital.eu" arget="_blank" class="styled-link-dark">EIT Digital</a> &mdash; leading European open innovation organisation.</p><br><br>
+            <div class="row valign-wrapper">
+              <div class="col s2 valign-wrapper center-align">
+                <img src="images/Aalto_logo.jpg" class="circle responsive-img z-depth-2">
+              </div>
+              <div class="col s4 valign-wrapper center-align">
+                <p>For the first year of Master School I studied in <a href="http://www.aalto.fi/en/" arget="_blank" class="styled-link-dark">Aalto University</a> in Espoo, Finland.</p>
+              </div>
+              <div class="col s2 valign-wrapper center-align">
+                <img src="images/KTH_logo.jpg" class="circle responsive-img z-depth-2">
+              </div>
+              <div class="col s4 valign-wrapper center-align">
+                <p>Currently I'm on the second year studying in <a href="https://www.kth.se/en" arget="_blank" class="styled-link-dark">KTH Royal Institute of Technology</a> in Stockholm, Sweden.</p>
+              </div>
+            </div>
+          </div>
+          <div class="divider"></div>
           <p>Under development..</p>
         </div>
       </div>
@@ -130,6 +150,8 @@
         <h4>Credits</h4>
         <p>This website is made with the use of <a href="http://materializecss.com" target="_blank" class="styled-link-dark">Materialize</a> framework.</p>
         <p>Favicon for this web site is cropped and converted to all need formats from &ldquo;<a href="https://www.creativetail.com/iconsmind-50-icons/" target="_blank" class="styled-link-dark">Iconsmind 50 icons</a>&rdquo; by <a href="https://www.iconsmind.com" target="_blank" class="styled-link-dark">Iconsmind</a> that is licensed under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" class="styled-link-dark">CC BY 4.0</a>.</p>
+        <p>Image of Aalto University logo by Aalto University [Public domain], <a href="https://commons.wikimedia.org/wiki/File%3AAalto_University_logo.svg" target="_blank" class="styled-link-dark">via Wikimedia Commons</a>.</p>
+        <p>Image of KTH Royal Institute of Technology logo by I99pema (Own work) <a href="https://commons.wikimedia.org/wiki/File%3AKTH_logotype.jpg" target="_blank" class="styled-link-dark">via Wikimedia Commons</a>, licensed under <a href="http://creativecommons.org/licenses/by-sa/3.0" target="_blank" class="styled-link-dark">CC BY-SA 3.0</a>.</p>
         <p>All other images on this website, except the photo of Denis Laure, are licensed under <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank" class="styled-link-dark">CC0 1.0</a>.</p>
     </div>
     <div class="modal-footer">
