Add info about post-graduate studies

--- a/index.html
+++ b/index.html
@@ -79,7 +79,32 @@
             </div>
           </div>
           <div class="divider"></div>
-          <p>Under development..</p>
+          <div class="section">
+            <div class="row">
+              <div class="col s6">
+                <h5>Post-graduate studies</h5>
+              </div>
+              <div class="col s6">
+                <h5 class="right-align">Specialist degree</h5>
+              </div>
+            </div>
+            <div class="row valign-wrapper">
+              <div class="col s5">
+                <p>In 2013 I was accepted for post-graduate studies in Mathematics and Software Engineering for Computers in <a href="http://www.uniyar.ac.ru/en/" arget="_blank" class="styled-link-dark">P.G. Demidov Yaroslavl State University</a> in my home city &mdash; Yaroslavl, Russia. Right now I'm on leave of abscence for this studies due to my studies in Europe.</p>
+              </div>
+              <div class="col s2 center-align">
+                <img src="images/YarSU_logo.jpg" class="circle responsive-img z-depth-2">
+              </div>
+              <div class="col s5 right-align">
+                <p>In 2013 I graduated from <a href="http://www.uniyar.ac.ru/en/" arget="_blank" class="styled-link-dark">P.G. Demidov Yaroslavl State University</a> with the specialist degree in Applied Mathematics and Information Science.</p>
+              </div>
+            </div>
+          </div>
+          <div class="divider"></div>
+          <div class="section">
+            <h5>Summer schools</h5>
+            <p>Under development..</p>
+          </div>
         </div>
       </div>
     </div>
@@ -152,6 +177,7 @@
         <p>Favicon for this web site is cropped and converted to all need formats from &ldquo;<a href="https://www.creativetail.com/iconsmind-50-icons/" target="_blank" class="styled-link-dark">Iconsmind 50 icons</a>&rdquo; by <a href="https://www.iconsmind.com" target="_blank" class="styled-link-dark">Iconsmind</a> that is licensed under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" class="styled-link-dark">CC BY 4.0</a>.</p>
         <p>Image of Aalto University logo by Aalto University [Public domain], <a href="https://commons.wikimedia.org/wiki/File%3AAalto_University_logo.svg" target="_blank" class="styled-link-dark">via Wikimedia Commons</a>.</p>
         <p>Image of KTH Royal Institute of Technology logo by I99pema (Own work) <a href="https://commons.wikimedia.org/wiki/File%3AKTH_logotype.jpg" target="_blank" class="styled-link-dark">via Wikimedia Commons</a>, licensed under <a href="http://creativecommons.org/licenses/by-sa/3.0" target="_blank" class="styled-link-dark">CC BY-SA 3.0</a>.</p>
+        <p>Image of P.G. Demidov Yaroslavl State University logo by <a href="https://commons.wikimedia.org/wiki/User:Бериллий" target="_blank" class="styled-link-dark">Berillium</a> [Public domain], <a href="https://commons.wikimedia.org/wiki/File:Emblem_of_Yaroslavl_State_University.jpg" target="_blank" class="styled-link-dark">via Wikimedia Commons</a>.</p>
         <p>All other images on this website, except the photo of Denis Laure, are licensed under <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank" class="styled-link-dark">CC0 1.0</a>.</p>
     </div>
     <div class="modal-footer">
