--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <li class="tab col s3"><a id="aboutMeTab" class="waves-effect active" href="#about">About me</a></li>
         <li class="tab col s3"><a id="educationTab" class="waves-effect" href="#education">Education</a></li>
         <li class="tab col s3"><a id="skillsTab" class="waves-effect" href="#skills">Skills</a></li>
-        <li class="tab col s3"><a id="projectsTab" class="waves-effect" href="#projects">Projects</a></li>
+        <li class="tab col s3"><a id="projectsTab" class="waves-effect" href="#projects">Experience</a></li>
+        <li class="tab col s3"><a id="awardsTab" class="waves-effect" href="#awards">Awards</a></li>
         <li class="tab col s3"><a id="publicationsTab" class="waves-effect" href="#publications">Publications</a></li>
       </ul>
     </div>
@@ -125,7 +126,21 @@
           <img src="images/projects.jpg">
         </div>
         <div class="card-content">
+          <span class="card-title blue-grey-text text-darken-4">Work experience</span>
+          <p>Under development..</p>
+          <div class="divider"></div>
           <span class="card-title blue-grey-text text-darken-4">Projects</span>
+          <p>Under development..</p>
+        </div>
+      </div>
+    </div>
+    <div id="awards" class="col s12">
+      <div id="awardsCard" class="card hoverable">
+        <div class="card-image">
+          <img src="images/awards.jpg">
+        </div>
+        <div class="card-content">
+          <span class="card-title blue-grey-text text-darken-4">Awards</span>
           <p>Under development..</p>
         </div>
       </div>
