Add info about summer schools

--- a/index.html
+++ b/index.html
@@ -104,7 +104,20 @@
           <div class="divider"></div>
           <div class="section">
             <h5>Summer schools</h5>
-            <p>Under development..</p>
+            <div class="row valign-wrapper">
+              <div class="col s4 center-align">
+                <p><a href="https://www.eitdigital.eu/entrepreneurial-education/summer-schools/summer-school-health-wellbeing/" arget="_blank" class="styled-link-dark">EIT Digital Summer School Health &amp; Wellbeing</a>, Eindhoven, the Netherlands.</p>
+                <p>12-24 July 2015</p>
+              </div>
+              <div class="col s4 center-align">
+                <p>&ldquo;Computer's Continuum: Mathematics, Information, Technologies&rdquo; Summer School, St-Petersburg, Russia.</p>
+                <p>26-31 August 2012</p>
+              </div>
+              <div class="col s4 center-align">
+                <p><a href="http://romip.ru/russir2012/" arget="_blank" class="styled-link-dark">6th Russian Summer School in Information Retrieval</a>, Yaroslavl, Russia.</p>
+                <p>6-10 August 2012</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
