Add info about awards

--- a/index.html
+++ b/index.html
@@ -154,7 +154,46 @@
         </div>
         <div class="card-content">
           <span class="card-title blue-grey-text text-darken-4">Awards</span>
-          <p>Under development..</p>
+          <div class="row valign-wrapper">
+            <div class="col s3 right-align">
+              <p>September 2015</p>
+            </div>
+            <div class="col s9">
+              <p>Winner of the Internet of everything &mdash; Afternoon Hack on IOT</p>
+            </div>
+          </div>
+          <div class="row valign-wrapper">
+            <div class="col s3 right-align">
+              <p>July 2015</p>
+            </div>
+            <div class="col s9">
+              <p><a href="https://www.eitdigital.eu/news-events/news/article/eit-digital-summer-school-health-and-wellbeing-2015-a-brainiac-work-out/" arget="_blank" class="styled-link-dark">Winner of the EIT Digital Summer School Health &amp; Wellbeing</a></p>
+            </div>
+          </div>
+          <div class="row valign-wrapper">
+            <div class="col s3 right-align">
+              <p>May 2013</p>
+            </div>
+            <div class="col s9">
+              <p><a href="http://fruct.org/node/337471" arget="_blank" class="styled-link-dark">Winner of the English language essays' contest</a>, organized by FRUCT, Aalto University and EIT ICT Labs</p>
+            </div>
+          </div>
+          <div class="row valign-wrapper">
+            <div class="col s3 right-align">
+              <p>April 2013</p>
+            </div>
+            <div class="col s9">
+              <p>Best Demo of 13th FRUCT Conference for Pulse Detector application</p>
+            </div>
+          </div>
+          <div class="row valign-wrapper">
+            <div class="col s3 right-align">
+              <p>March 2013</p>
+            </div>
+            <div class="col s9">
+              <p>Finalist of the <a href="http://www.lgappscontest.ru" arget="_blank" class="styled-link-dark">LG Smart TV Apps Contest</a> 2012</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
