Add info about skills

--- a/index.html
+++ b/index.html
@@ -129,7 +129,134 @@
         </div>
         <div class="card-content">
           <span class="card-title blue-grey-text text-darken-4">Professional skills</span>
-          <p>Under development..</p>
+          <div class="divider"></div>
+          <div class="section">
+            <h5>Operating systems</h5>
+            <div class="row valign-wrapper">
+              <div class="col s4 center-align">
+                <p>Debian GNU/Linux</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 70%"></div>
+                </div>
+              </div>
+              <div class="col s4 center-align">
+                <p>Mac OS X</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 90%"></div>
+                </div>
+              </div>
+              <div class="col s4 center-align">
+                <p>Microsoft Windows</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 80%"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="divider"></div>
+          <div class="section">
+            <h5>Scientific software</h5>
+            <div class="row valign-wrapper">
+              <div class="col s4 center-align">
+                <p>GNU Octave / MATLAB</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 50%"></div>
+                </div>
+              </div>
+              <div class="col s4 center-align">
+                <span class="latex">L<sup>A</sup>T<sub>E</sub>X</span>
+                <div class="progress">
+                  <div class="determinate" style="width: 70%"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="divider"></div>
+          <div class="section">
+            <h5>Other software</h5>
+            <div class="row valign-wrapper">
+              <div class="col s4 center-align">
+                <p>Axure</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 70%"></div>
+                </div>
+              </div>
+              <div class="col s4 center-align">
+                <p>Autodesk Tinkercad</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 60%"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="divider"></div>
+          <div class="section">
+            <h5>Programming</h5>
+            <div class="row valign-wrapper">
+              <div class="col s4 center-align">
+                <p>C/C++</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 50%"></div>
+                </div>
+              </div>
+              <div class="col s4 center-align">
+                <p>Qt + QML</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 70%"></div>
+                </div>
+              </div>
+              <div class="col s4 center-align">
+                <p>Java (SE, EE, Android)</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 80%"></div>
+                </div>
+              </div>
+            </div>
+            <div class="row valign-wrapper">
+              <div class="col s4 center-align">
+                <p>HTML, Javascript</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 60%"></div>
+                </div>
+              </div>
+              <div class="col s4 center-align">
+                <p>PHP</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 30%"></div>
+                </div>
+              </div>
+              <div class="col s4 center-align">
+                <p>Python</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 60%"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="divider"></div>
+          <div class="section">
+            <h5>Mobile development</h5>
+            <div class="row valign-wrapper">
+              <div class="col s4 center-align">
+                <p>Android</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 80%"></div>
+                </div>
+              </div>
+              <div class="col s4 center-align">
+                <p>Tizen</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 50%"></div>
+                </div>
+              </div>
+              <div class="col s4 center-align">
+                <p>Symbian, Harmattan, Maemo</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 70%"></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
