--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <span class="card-title blue-grey-text text-darken-4">About me</span>
           <p>Hello! My name is Denis Laure and I'm 24 years old student from Russia. Currently I'm doing my MSc degree in the North of Europe &mdash; Stockholm, Sweden. I'm studying human-computer interaction and design, but I also have strong background in research and software development. I like music, enjoy traveling and learning new things.
           <br><br>
-          <p>Right now I'm looking for internship and mater thesis work. Please, follow the tabs on the top of this page, if you want to know more about me. You can also download my Сurriculum vit&aelig; in PDF format by pressing the link below.</p>
+          <p>Right now I'm looking for internship and master thesis job. You can follow the tabs on the top of this page to know more about me. Or just download my Сurriculum vit&aelig; in PDF format by pressing the link below.</p>
         </div>
         <div class="card-action">
           <a class="modal-trigger" href="#contact">Contact me</a>
